--- a/templates/base.jade
+++ b/templates/base.jade
@@ -57,6 +57,21 @@ html(ng-app="abelujo")
                 li(href="#")
                     a(href='/database') {% trans "All" %}
 
+        form.navbar-form.navbar-left
+          .form-group
+            input.form-control(
+              style="background-color: #F7F7F9"
+              typeahead-loading="loadingCards"
+              ng-model='copy_selected'
+              uib-typeahead='copy.repr for copy in getCards($viewValue)'
+              typeahead-min-length="3"
+              typeahead-on-select="go_to_card($item)"
+              title="{% trans 'Use TAB to validate your choice, Enter to proceed.' %}"
+              title='{% trans "Search any isbn, search by keywords in your stock" %}'
+              placeholder='{% trans "Search" %}'
+            )
+
+
         ul.nav.navbar-nav.navbar-right
           //- li(href="#")
           //-   a.text-right(href="/admin", style="padding-right: 3px") {% trans "Admin" %}
