Stock search: export as txt
fixes #48 - Export My Stock search results

--- a/templates/search/collection.jade
+++ b/templates/search/collection.jade
@@ -100,6 +100,13 @@ div(ng-cloak, ng-controller="collectionController")
        ul.dropdown-menu
          li: a(href="#", ng-click="open()", ng-show="selected", title='{% trans "Add the cards selected to basket(s)" %}'){% trans 'Add selection to baskets…' %}
 
+     .btn-group
+       button.btn.btn-success.dropdown-toggle(type="button", data-toggle="dropdown", aria-haspopup="true", aria-expanded="false") {% trans "Export" %}…
+         span.caret
+
+       ul.dropdown-menu
+         li: a(href="/stock/export?query={{ 'query' | ng }}&format=txt&publisher_id={{ 'publisher.pk' | ng}}&place_id={{ 'place.id' | ng}}&card_type={{ 'card_type' | ng}}&shelf_id={{ 'shelf.pk' | ng}}&distributor_id={{ 'distributor.id' | ng}}", ng-show="selected", title='{% trans "Export the selection to txt" %}'){% trans 'Selection to txt' %}
+
 
       button.btn.btn-default(ng-click="toggle_images()", title='{% trans "Hide and show covers" %}')
         i.glyphicon.glyphicon-th-list
