Integration tests with Testcafé (instead of Protractor or Selenium)
Fixes #45 - Protractor must login before running end to end tests (e2e)

https://github.com/DevExpress/testcafe

Protractor is difficult to install, unstable, depends on Angular (which
we may avoid later on), has issues waiting for the application to load,
and most of all has issues when it isn't on an Angular page, hence our
pb just logging in into the app.

Selenium needs a plugin (geckodriver, chromedriver) that isn't even on
pip or apt.

TestCafé was open-sourced recently, it isn't bare new. No plugins,
installs easily, fully-featured. Let's try. We can already do some
work.

--- a/templates/registration/login.jade
+++ b/templates/registration/login.jade
@@ -32,7 +32,7 @@
         td {{ form.password.label_tag }}
         td {{ form.password }}
 
-    input.btn.btn-lg.btn-primary.btn-block(type="submit", value='{% trans "login" %}')
+    input#submit_button.btn.btn-lg.btn-primary.btn-block(type="submit", value='{% trans "login" %}')
     input(type="hidden", name="next", value="{{ next }}")
     {% if form.errors %}
     p {% trans "Your username and password didn't match. Please try again." %}
