Card.date_publication: save as date and display

--- a/templates/search/collection.jade
+++ b/templates/search/collection.jade
@@ -143,6 +143,7 @@ div(ng-cloak, ng-controller="collectionController")
                .col-md-6
                 b isbn: 
                 span {{ 'card.isbn' |ng}}
+                div {{ 'card.date_publication | date: "mediumDate"' | ng }}
         td
           div {{ 'card.price | currency' | ng}}
 
