--- a/templates/search/baskets.jade
+++ b/templates/search/baskets.jade
@@ -80,7 +80,9 @@ div(ng-cloak, ng-controller="basketsController")
 
        li: a(href="/baskets/{{ 'cur_basket.id' | ng}}/export?format=csv&report=simplelisting") {% trans "isbn and quantity (Dilicom)" %} - csv
 
-       li: a(href="/baskets/{{ 'cur_basket.id' | ng}}/export?format=pdf&report=listing") {% trans "List, with barcodes" %} - pdf
+       li: a(href="/baskets/{{ 'cur_basket.id' | ng}}/export?format=pdf&report=listing&barcodes=true") {% trans "List, with barcodes" %} - pdf
+
+       li: a(href="/baskets/{{ 'cur_basket.id' | ng}}/export?format=pdf&report=listing&barcodes=false&covers=true") {% trans "List, with covers" %} - pdf
 
     .btn-group
        button.btn.btn-default(ng-click="toggle_images()", title='{% trans "Hide and show covers (d)" %}')
