--- a/templates/search/to_command.jade
+++ b/templates/search/to_command.jade
@@ -99,6 +99,8 @@ div(ng-cloak, ng-controller="basketToCommandController")
 
                    li: a(href="/baskets/1/export?format=csv&report=simplelisting&distributor_id={{ 'grouped_dist[dist_name][0].id' | ng}}", title='{% trans "Export the list of all cards to command in a csv, suitable for LibreOffice and to give to other services, like Dilicom." %}') {% trans "isbn and quantity" %} - csv (Dilicom)
 
+               button.btn.btn-success(ng-click="validate_command(dist_name)",
+                 title='{% trans "The command was passed, we`ll wait to receive it." %}') {% trans "Ok" %}
 
           table.table.table-condensed.table-striped
               thead
